# Final-Project---mmn-14

./: CMakeLists.txt  Data.c  Data.h  action.c  action.h  assembler.c  firstPass.c  first_pass.h  makefile  outputCreation.c  output_creation.h  parsing.c  parsing.h  second_pass.h  utilities.c  utilities.h  ~$ויקט גמר.docx  ניקוד פרויקט - ממן 14.xlsx  פרויקט גמר.docx
כל מיני דברים שצריכים לשתף/: CV Genady.docx  קורות חיים - גיא.doc
כל מיני דברים שצריכים לשתף/maman_23/input files/: test2.txt  test4.txt
כל מיני דברים שצריכים לשתף/maman_23/source files/: error_handling.c  main.c  makefile  maman23  permutation.c
כל מיני דברים שצריכים לשתף/הכנה למבחן/: MemberNode.txt
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/: נכון או לא נכון - עם פתרון.docx  נכון או לא נכון.docx  פתרונות למבחנים לדוגמא.docx  קישור להרצאה על סיביות.txt  שאלות בנושא רשימות מקושרות.docx
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/(no solution)2017a-93/: q2.txt
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/2009b-92/Sababa's answers/: question2.c  question4.c
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/2010a-82/Sababa's answers/: question1.txt  question2.c  (+1 more)
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/Test example A/: Itay's answers.docx
כל מיני דברים שצריכים לשתף/הכנה למבחן/מבחנים במעבדה בתכנות מערכות 20465/Test example B/: Itay's answers.docx
קבצי קלט - פרויקט/: badpath-datasize.as  badpath-immedsize.as  badpath-jump.as  badpath-pass1.as  myprog.as  ps.as
(+89 files in other folders)
